Edited current sprint

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -19,7 +19,7 @@
     </div>
     
     <div class="sidebar">
-      <h2>Our Mission</h2>
+      <h2>Mission</h2>
       <p>This is the sidebar section. You can use this area for navigation links, additional information, or anything else you find useful.</p>
     </div>
     
